<resources>
    <string name="app_name">Kaarbizz</string>

    <string name="Font_Montserrat_Light">Montserrat-Light</string>
    <string name="Font_Montserrat_Regular">Montserrat-Regular</string>
    <string name="Font_Montserrat_SemiBold">Montserrat-SemiBold</string>
    <string name="search_cars">Search cars</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="later">Later</string>
    <string name="sign_in_for_better_experience">Sign in for better experience</string>
    <string name="log_in">Log in</string>
    <string name="welcome">Welcome</string>
    <string name="my_email">anuj55149@gmail.com</string>
    <string name="my_name">Anuj Kumar Sharma</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="ip_address_dialog_message">1. Run the server \n2. Enter the current <b>IP Address</b> of the System running the server</string>
    <string name="ip_address_dialog_title">Server configuration error</string>
    <string name="retry">RETRY</string>
    <string name="string_continue"><u>CONTINUE</u></string>
    <string name="your_location">YOUR LOCATION</string>
    <string name="change"><u>CHANGE</u></string>
    <string name="dealer">DEALER</string>
    <string name="brand">BRAND</string>
    <string name="sort_by">SORT BY</string>
    <string name="nearest_to_me">Nearest to me</string>
    <string name="dealer_s_rating">Dealer\'s Rating</string>
    <string name="price_low_to_high">Price -- Low to High</string>
    <string name="price_high_to_low">Price -- High to Low</string>
    <string name="four_star_and_above"><![CDATA[4★ & above]]></string>
    <string name="three_star_and_above"><![CDATA[3★ & above]]></string>
    <string name="two_star_and_above"><![CDATA[2★ & above]]></string>
    <string name="one_star_and_above"><![CDATA[1★ & above]]></string>
    <string name="apply">APPLY</string>
    <string name="reset">RESET</string>
    <string name="yellow">Yellow</string>
    <string name="silver">Silver</string>
    <string name="metallic_white">Metallic White</string>
    <string name="grey">Grey</string>
    <string name="black">Black</string>
    <string name="color">Color</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="transmission_type">Transmission Type</string>
    <string name="max_distance">500Km+</string>
    <string name="max_price">₹100L+</string>

</resources>
