<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_round_corners_white"
    android:padding="@dimen/top_search_padding">

    <com.anuj55149.kaarbizz.customViews.TypefaceTextView
        android:id="@+id/tvCheckIpAddressTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingBottom="@dimen/top_search_padding"
        android:text="@string/ip_address_dialog_title"
        android:textColor="@color/black"
        android:textSize="@dimen/top_search_text_size"
        app:typeface="@string/Font_Montserrat_SemiBold" />

    <com.anuj55149.kaarbizz.customViews.TypefaceTextView
        android:id="@+id/tvCheckIpAddressMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCheckIpAddressTitle"
        android:text="@string/ip_address_dialog_message"
        app:typeface="@string/Font_Montserrat_Regular" />

    <com.anuj55149.kaarbizz.customViews.TypefaceEditText
        android:id="@+id/etIPAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCheckIpAddressMessage"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/top_search_padding"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:textSize="@dimen/top_search_text_size"
        app:typeface="@string/Font_Montserrat_Regular" />

    <com.anuj55149.kaarbizz.customViews.TypefaceTextView
        android:id="@+id/tvIPOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etIPAddress"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/top_search_padding"
        android:text="@string/retry"
        android:textColor="@color/black"
        android:textSize="@dimen/top_search_text_size"
        app:typeface="@string/Font_Montserrat_Regular" />

</RelativeLayout>