<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.anuj55149.kaarbizz.customViews.TypefaceTextView
        android:id="@+id/tvMessageSortBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/top_search_padding_double"
        android:paddingEnd="@dimen/top_search_padding"
        android:paddingStart="@dimen/top_search_padding"
        android:paddingTop="@dimen/top_search_padding_double"
        android:text="@string/sort_by"
        app:typeface="@string/Font_Montserrat_Regular" />

    <View
        android:id="@+id/vDivider"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_below="@id/tvMessageSortBy"
        android:background="@color/colorPrimaryMoreDark" />

    <RadioGroup
        android:id="@+id/rgSort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/vDivider"
        android:inputType="text"
        android:orientation="vertical"
        android:padding="@dimen/top_search_padding">

        <com.anuj55149.kaarbizz.customViews.TypefaceRadioButton
            android:id="@+id/rbNearest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:paddingBottom="@dimen/top_search_padding"
            android:paddingTop="@dimen/top_search_padding"
            android:text="@string/nearest_to_me"
            android:textAlignment="textStart"
            app:typeface="@string/Font_Montserrat_Regular" />

        <com.anuj55149.kaarbizz.customViews.TypefaceRadioButton
            android:id="@+id/rbRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:paddingBottom="@dimen/top_search_padding"
            android:paddingTop="@dimen/top_search_padding"
            android:text="@string/dealer_s_rating"
            android:textAlignment="textStart"
            app:typeface="@string/Font_Montserrat_Regular" />

        <com.anuj55149.kaarbizz.customViews.TypefaceRadioButton
            android:id="@+id/rbPriceLH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:paddingBottom="@dimen/top_search_padding"
            android:paddingTop="@dimen/top_search_padding"
            android:text="@string/price_low_to_high"
            android:textAlignment="textStart"
            app:typeface="@string/Font_Montserrat_Regular" />

        <com.anuj55149.kaarbizz.customViews.TypefaceRadioButton
            android:id="@+id/rbPriceHL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layoutDirection="rtl"
            android:paddingBottom="@dimen/top_search_padding"
            android:paddingTop="@dimen/top_search_padding"
            android:text="@string/price_high_to_low"
            android:textAlignment="textStart"
            app:typeface="@string/Font_Montserrat_Regular" />

    </RadioGroup>

</RelativeLayout>