<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/abSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <android.support.v7.widget.CardView
            android:id="@+id/xTopSearchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/top_search_margin"
            android:transitionName="searchCard"
            app:cardCornerRadius="@dimen/top_search_corner_radius">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/toolbar_height">

                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:padding="@dimen/top_search_padding"
                    app:srcCompat="@drawable/ic_back" />

                <com.anuj55149.kaarbizz.customViews.TypefaceEditText
                    android:id="@+id/etSearch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/top_search_margin"
                    android:layout_toEndOf="@+id/ivBack"
                    android:layout_toStartOf="@+id/ivCancel"
                    android:background="@android:color/transparent"
                    android:hint="@string/search_cars"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="@dimen/top_search_padding"
                    android:textSize="@dimen/top_search_text_size"
                    app:typeface="@string/Font_Montserrat_Regular" />


                <ImageView
                    android:id="@+id/ivCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:padding="@dimen/top_search_padding"
                    android:visibility="gone"
                    app:srcCompat="@drawable/ic_cancel_circle" />


            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvSearchResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/abSearch" />

    <RelativeLayout
        android:id="@+id/rlServerError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/abSearch"
        android:padding="@dimen/gps_radius"
        android:visibility="gone">

        <com.anuj55149.kaarbizz.customViews.TypefaceTextView
            android:id="@+id/tvCheckIpAddressTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingBottom="@dimen/top_search_padding"
            android:text="@string/ip_address_dialog_title"
            android:textColor="@color/black"
            android:textSize="@dimen/top_search_text_size"
            app:typeface="@string/Font_Montserrat_SemiBold" />


        <com.anuj55149.kaarbizz.customViews.TypefaceTextView
            android:id="@+id/tvIPContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvCheckIpAddressTitle"
            android:layout_centerHorizontal="true"
            android:padding="@dimen/top_search_padding"
            android:text="@string/string_continue"
            android:textColor="@color/black"
            android:textSize="@dimen/top_search_text_size"
            app:typeface="@string/Font_Montserrat_Regular" />

    </RelativeLayout>


    <ProgressBar
        android:id="@+id/pbSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>